<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuCartasFragment"
    android:id="@+id/MenuCartas">

    <TextView
        android:id="@+id/Agregar"
        app:layout_constraintBottom_toTopOf="@+id/button_Agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:layout_marginBottom="130dp"
        android:text="@string/Ins_agregar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_Agregar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="#ffffff"
        android:contentDescription="@string/agregar"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/button_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_eliminar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:background="#ffffff"
        android:contentDescription="@string/boton_eliminar"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>